--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                   type="text"
                   id="last"
                   name="last"
-                /><br>
+                  minlength="2" 
+                /><!--Ajout du minim caractères--><br>
               </div>
               <div
                 class="formData">
@@ -110,7 +111,7 @@
               </div>
               <p class="text-label">Quelles villes ?</p>
               <div
-                class="formData">
+                class="formData" id="choixlocation">
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -180,7 +181,7 @@
               </div>
 
               <div
-                class="formData">
+                class="formData" id="box-choice">
                 <input
                   class="checkbox-input"
                   type="checkbox"
@@ -200,6 +201,7 @@
                 <br>
               </div>
               <input
+                id="btn-confirm"
                 class="btn-submit"
                 type="submit"
                 class="button"
