--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     />
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
-      <div class="header-logo">
+  <div class="topnav" id="myTopnav">
+    <div class="header-logo">
       <img alt="logo" src="Logo.png" width="auto" height="auto" />
     </div>
-    <div class="main-navbar">
-      
+    <div class="main-navbar">     
       <a href="#" class="active"><span>Accueil</span></a>
       <a href="#"><span>Détails de l'évènement</span></a>
       <a href="#"><span>À propos</span></a>
@@ -54,14 +53,14 @@
       <div class="bground">
         <div class="content">
           <span class="close"></span>
-          <div class="modal-body">
+          <div class="modal-body" id="main">
             <form
               id="formInscription"
               name="reserve"
-              action="confirmation.html"
               method="get"
-              onsubmit="return validate()"
+              action="#"
             >
+            <div id="formulaireContain">
               <div
                 class="formData">
                 <label for="first">Prénom</label><br>
@@ -107,10 +106,11 @@
                 <label for="birthdate">Date de naissance</label><br>
                 <input
                   class="text-control"
-                  type="date"
+                  placeholder="xx/xx/xxxx"
                   id="birthdate"
                   name="birthdate"
                 />
+                <p id="erreurdate"></p>
                 <br>
               </div>
               <div
@@ -119,7 +119,7 @@
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
                 <p id="erreurnbTournoi"></p>
               </div>
-              <p class="text-label">Quelles villes ?</p>
+              <p class="text-label">Quelle ville ?</p>
               <div
                 class="formData" id="choixlocation">
                 <input
@@ -211,19 +211,25 @@
                 </label>
                 <br>
               </div>
+              </div>
               <p id="erreurconditions"></p>
               <input
+                id="btn-submit"
                 class="btn-submit"
                 type="submit"
                 class="button"
                 value="C'est parti !"
               />
+              <input
+              id="closeBtn"
+              class="btn-submit"
+              type="submit"
+              class="button"
+              value="Close"
+              />
             </form>
           </div>
         </div>
-      </div>
-      <div id="formenvoye">
-        <p>Félicitations ! Votre inscription est bien enregistrée !</p>
       </div>
     </main>
     <footer>
