--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
   <div class="topnav" id="myTopnav">
     <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="Logo.png"/>
     </div>
     <div class="main-navbar">     
       <a href="#" class="active"><span>Accueil</span></a>
@@ -25,7 +25,6 @@
       <a href="javascript:void(0);" class="icon" onclick="editNav()">
         <i class="fa fa-bars"></i>
       </a>
-    </div>
     </div>
   </div>
     <main>
@@ -215,16 +214,14 @@
               <p id="erreurconditions"></p>
               <input
                 id="btn-submit"
-                class="btn-submit"
+                class="btn-submit button"
                 type="submit"
-                class="button"
                 value="C'est parti !"
               />
               <input
               id="closeBtn"
-              class="btn-submit"
+              class="btn-submit button"
               type="submit"
-              class="button"
               value="Close"
               />
             </form>
